Add vault create/delete feature (#68)
- Implements new controller for vault management (including client)
- Adds create/delete/list/recover features for vaults
- Implements converter to process vault metadata
- Adds new test cases
- Updates Gradle version
- Updates Abort-Mission version

Resolves #59
{minor}